objects/CS_AccountSimplification__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>ClassificationLevel1__c</fullName>
        <label>Classification Level 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationLevel2__c</fullName>
        <label>Classification Level 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadingBusiness__c</fullName>
        <label>Leading Business</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MarketSegment__c</fullName>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CS_Account Simplification</label>
</CustomObject>